src/objects/ffct__MigrationRule__c.object
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>Holds the rule to be applied on the Migration Set</description>
    <fields>
        <fullName>ffct__ApplicableForPackages__c</fullName>
        <description>Holds the list of package namespaces on which the rule is applicable.</description>
        <label>Applicable For Packages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>appirio_core</fullName>
                </value>
                <value>
                    <fullName>c2g</fullName>
                </value>
                <value>
                    <fullName>fferpcore</fullName>
                </value>
                <value>
                    <fullName>ffgl</fullName>
                </value>
                <value>
                    <fullName>ffirule</fullName>
                </value>
                <value>
                    <fullName>ffr</fullName>
                </value>
                <value>
                    <fullName>ffrr</fullName>
                </value>
                <value>
                    <fullName>ffrr_exp</fullName>
                </value>
                <value>
                    <fullName>ffumt</fullName>
                </value>
                <value>
                    <fullName>ob1</fullName>
                </value>
                <value>
                    <fullName>psa_report</fullName>
                </value>
                <value>
                    <fullName>pse</fullName>
                </value>
                <value>
                    <fullName>pse_resource</fullName>
                </value>
                <value>
                    <fullName>VanaHCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__Description__c</fullName>
        <description>Holds the description of the rule.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__FilterOperation__c</fullName>
        <description>Holds values &apos;Include&apos;/&apos;Exclude&apos; operation to be performed by the rule.</description>
        <label>Filter Operation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ffct__Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__Type__c</fullName>
        <description>Holds the type of rule. Currently it supports &apos;Filter&apos;.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Filter</fullName>
                    <default>true</default>
                    <label>Filter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Migration Rule</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <columns>NAME</columns>
        <columns>ffct__FilterOperation__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Migration Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>